[package]
name = "mndp"
version = "0.1.0"
authors = ["Christopher Bruton <chris@bruton.tech>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
macaddr = "1.0.1"

[dev-dependencies]
hex = "0.4.3"
